k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubelab-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubelab-api
  template:
    metadata:
      labels:
        app: kubelab-api
    spec:
      containers:
      -  name: kubelab-api
         image: kubelab-api:1.2
         imagePullPolicy: Never
         ports:
         - containerPort: 8000
         readinessProbe:
           httpGet:
             path: /health
             port: 8000
         livenessProbe:
           httpGet:
             path: /health
             port: 8000
         resources:
           requests:
             cpu: 100m
             memory: 64Mi
           limits:
             cpu: 500m
             memory: 256Mi
